Online/Offline html

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
 
 <body class="container">
     <h1 class="mt-2">Websocket client </h1>
-    <p class="txt-success"> Seccion 14 Curso Node JS Fernando Herrera</p>
+    <p class="txt-success"> Server Status:</p>
+    <span id="on" class="text-success">Online</span>
+    <span id="off" class="text-danger">Offline</span>
 
 </body>
 
