--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,20 @@
 </body>
 
 
+<div class="row">
+    <div class="col">
+        <input type="text" id="txtMsg" class="form-control" >
+    </div>
+
+    <div class="col">
+        <button id="btnEnviar" class="btn btn-primary">
+            Enviar
+        </button>
+        
+    </div>
+</div>
+
+
 <script src="./socket.io/socket.io.js"></script>
 <script src="./js/socket-client.js"></script>
 </html>
